[tool.poetry]
name = "es-messageoard"
version = "0.1.0"
description = "Event sourced message board example"
authors = ["Nick Tindall <nick@tindall.id.au>"]

[tool.poetry.dependencies]
python = "^3.9"
eventsourcing = "^9.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
mypy = "^0.812"
coverage = "^5.5"
pytest-cov = "^2.11.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
